# ProgettoPCS2025

./: .gitignore.txt  CMakeLists.txt  main.cpp
src/: PolygonalMesh.hpp  PolyhedralMesh.hpp  PolyhedralTriangulation.cpp  PolyhedralTriangulation.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  TestPolygon.hpp  test_ComputeVEF.cpp  test_CreateTxtFiles.cpp  test_ExportSolids.cpp  test_GenerateDual.cpp  test_GenerateTriangulatedMesh1.cpp  test_GenerateTriangulatedMesh2.cpp  test_VertexEdgeIsDupe.cpp
